--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ C:\\nppdf32Log\\debuglog.txt
 # Sublime Text Project Files (usually contain absolute paths)
 *.sublime-project
 *.sublime-workspace
+
+# Audio
+*.m4a
